argocd/pelican/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pelican
  namespace: pelican
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`panel.yggdrasil.mia.cx`) || Host(`panel.mia.cx`)
      kind: Rule
      services:
        - name: pelican
          port: 80
  tls: {}
